--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2874,7 +2874,7 @@
 
 	#banner {
 		padding: 8em 0 9em 0;
-		background-image: url(../../pexels-photo-609771-lo-fi.jpeg);
+		background-image: url(../../pexels-photo-609771-lo-fi.jpg);
 		background-size: cover;
 		background-position: bottom;
 		background-attachment: fixed;
